--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   equatable: ^1.2.5
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
+  flutter_html: ^1.0.2
 
 dev_dependencies:
   flutter_test:
