--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
   flutter_html: ^1.0.2
+  sqflite: ^1.3.0
 
 dev_dependencies:
   flutter_test:
